<resources>
    <string name="app_name">News Demon 😈</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="save">Add to Favourites</string>
    <string name="read">Full Article</string>
    <string name="saved">Saved for later</string>
    <string name="free_articles">"Free articles remaining: "</string>
    <string name="upgrade">Unlock more</string>
    <string name="open">Open</string>
    <string name="favouriteslist">Favourites List</string>
    <string name="toolbarMenuClick"> Toolbar Click</string>
    <string name="title_activity_1">Activity1</string>

    <string name="favourites">Favourites</string>
    <string name="title_activity_articles">ArticlesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="help">Help</string>
    <string name="weatherhelptext">This page displays your current weather.</string>
    <string name="paymenthelptext">You can buy more articles instantly here.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="purchase">Purchase</string>
    <string name="searchHelp">You can see a list of articles in this page. Click one for options</string>
    <string name="favouritesHelp">Help</string>
    <string name="favouritesHelpText">Click on an item to open a DialogFragment to Delete it</string>
    <string name="ccNumber">Credit Card Number</string>
    <string name="mm_yy">MM / YY</string>
    <string name="cvv">CVV</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="currentTemp">Current temp</string>
    <string name="minTemp">Min temp</string>
    <string name="maxTemp">Max tmep</string>
    <string name="uvRating">UV Rating</string>
    <string name="unlock">Unlock more Articles</string>
    <string name="quickbuy">Express Purchase 15 Articles</string>
</resources>